# AmgXWrapper

./: .gitignore  AmgXWrapperConfig.cmake.in  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  amgxwrapper-config.cmake.in  paper.md
doc/: Doxyfile  dependencies.md  install.md  test.md  usage.md
example/: README.md
example/Poisson/benchmarks/: report.ipynb
example/Poisson/benchmarks/errors/: Nx320Ny160Nz80_PETSc04.error
example/Poisson/benchmarks/results/: Nx1000Ny500Nz200_PETSc32.result  Nx160Ny160Nz160_GPU32.result  Nx160Ny160Nz160_PETSc04.result  Nx320Ny160Nz80_GPU01.result
example/Poisson/benchmarks/slurmScripts/: Nx160Ny160Nz160_GPU02.qsub  Nx160Ny160Nz160_GPU32.qsub  Nx320Ny160Nz80_GPU02.qsub
example/poisson/: CMakeLists.txt  README.md
example/poisson/configs/: AmgX_SolverOptions_Classical.info
example/poisson/src/: StructArgs.cpp  StructArgs.hpp  applyNeumannBC.cpp  applyNeumannBC.hpp  main.cpp
example/solveFromFiles/: CMakeLists.txt  README.md
example/solveFromFiles/src/: StructArgs.cpp  io.cpp  io.hpp  main.cpp  solve.cpp
src/: AmgXSolver.cpp  AmgXSolver.hpp  check.hpp  consolidate.cu  cudaCHECK.hpp  init.cpp  init.inl  misc.cpp  misc.inl  setA.cpp  setA.inl  solve.cpp  solve.inl
tests/: README.md
tests/Poisson/: CMakeLists.txt  README.md
tests/Poisson/benchmarks/: README.md  grabData.py
tests/Poisson/benchmarks/errors/: Nx160Ny160Nz160_GPU01.error
tests/Poisson/benchmarks/results/: Nx160Ny160Nz160_GPU01.result  Nx160Ny160Nz160_GPU02.result  Nx160Ny160Nz160_GPU04.result  Nx160Ny160Nz160_GPU08.result  Nx160Ny160Nz160_PETSc01.result  Nx160Ny160Nz160_PETSc08.result  Nx160Ny160Nz160_PETSc16.result  Nx160Ny160Nz160_PETSc32.result  Nx320Ny160Nz80_GPU32.result  Nx320Ny160Nz80_PETSc01.result  Nx320Ny160Nz80_PETSc04.result  Nx320Ny160Nz80_PETSc08.result  Nx320Ny160Nz80_PETSc16.result  Nx320Ny160Nz80_PETSc32.result
tests/Poisson/benchmarks/slurmScripts/: Nx1000Ny500Nz200_GPU32.qsub  Nx160Ny160Nz160_GPU01.qsub  Nx160Ny160Nz160_GPU16.qsub  Nx160Ny160Nz160_PETSc04.qsub  Nx160Ny160Nz160_PETSc08.qsub  Nx160Ny160Nz160_PETSc32.qsub  Nx320Ny160Nz80_GPU08.qsub  Nx320Ny160Nz80_GPU16.qsub  Nx320Ny160Nz80_GPU32.qsub
tests/Poisson/src/: Poisson.cpp  StructArgs.hpp  applyNeumannBC.cpp  generateA.cpp  generateRHS.cpp  headers.hpp
tests/Poisson2D/: CMakeLists.txt
tests/Poisson2D/configs/: AmgX_V_HMIS_LU_0.8.info  PETSc_SolverOptions.info
tests/Poisson2D/src/: .Poisson2D.cpp.swp  Poisson2D.cpp  StructArgs.hpp  createKSP.cpp  generateA.cpp  generateExt.cpp  generateGrid.cpp  generateRHS.cpp  getArgs.cpp  headers.hpp
tests/Poisson3D/: CMakeLists.txt
tests/Poisson3D/benchmarks/: README.md  config_build.sh  grabData.py  moduleLoad.sh  report.ipynb  runScripts.sh
tests/Poisson3D/benchmarks/Nx160Ny160Nz160/GPU/: job.qsub
tests/Poisson3D/benchmarks/results/: Nx1000Ny500Nz200_GPU32.result  Nx1000Ny500Nz200_PETSc32_old.result  Nx160Ny160Nz160_GPU16.result  Nx160Ny160Nz160_PETSc02.result  Nx320Ny160Nz80_GPU02.result  Nx320Ny160Nz80_GPU04.result  Nx320Ny160Nz80_GPU08.result  Nx320Ny160Nz80_GPU16.result  Nx320Ny160Nz80_PETSc02.result
tests/Poisson3D/benchmarks/slurmScripts/: Nx1000Ny500Nz200_GPU32.qsub  Nx1000Ny500Nz200_PETSc32.qsub  Nx160Ny160Nz160_GPU01.qsub  Nx160Ny160Nz160_GPU02.qsub  Nx160Ny160Nz160_GPU04.qsub  Nx160Ny160Nz160_GPU08.qsub  Nx160Ny160Nz160_GPU16.qsub  Nx160Ny160Nz160_GPU32.qsub  Nx160Ny160Nz160_PETSc01.qsub  Nx160Ny160Nz160_PETSc02.qsub  Nx160Ny160Nz160_PETSc04.qsub  Nx160Ny160Nz160_PETSc08.qsub  Nx160Ny160Nz160_PETSc16.qsub  Nx160Ny160Nz160_PETSc32.qsub  Nx320Ny160Nz80_GPU01.qsub  Nx320Ny160Nz80_GPU02.qsub  Nx320Ny160Nz80_GPU04.qsub  Nx320Ny160Nz80_GPU08.qsub  Nx320Ny160Nz80_GPU16.qsub  Nx320Ny160Nz80_GPU32.qsub  Nx320Ny160Nz80_PETSc01.qsub  Nx320Ny160Nz80_PETSc02.qsub  Nx320Ny160Nz80_PETSc04.qsub  Nx320Ny160Nz80_PETSc08.qsub  Nx320Ny160Nz80_PETSc16.qsub  Nx320Ny160Nz80_PETSc32.qsub
tests/Poisson3D/configs/: AmgX_SolverOptions_agg.info  AmgX_SolverOptions_classical.info  AmgX_V_HMIS_LU_0.8.info  PETSc_SolverOptions_gamg.info  PETSc_SolverOptions_hypre.info
tests/Poisson3D/src/: Poisson3D.cpp  StructArgs.hpp  createKSP.cpp  generateA.cpp  generateExt.cpp  generateGrid.cpp  generateRHS.cpp  getArgs.cpp  headers.hpp  solve.cpp
tests/benchmarks/: README.md  config_build.sh  moduleLoad.sh  runBenchmarks.sh
tests/benchmarks/report/: grabData.py
tests/benchmarks/scripts/: debug_cpu.sh  debug_gpu.sh  launchPoisson.sh
tests/benchmarks/scripts/Poisson_2D/: Nx2950Ny2950_AmgX_AGG.sh  Nx2950Ny2950_AmgX_Classical.sh  Nx2950Ny2950_PETSc_GAMG.sh  Nx2950Ny2950_PETSc_Hypre.sh  Nx3000Ny3000_AmgX_AGG.sh  Nx3000Ny3000_AmgX_Classical.sh  Nx3000Ny3000_PETSc_GAMG.sh  Nx3000Ny3000_PETSc_Hypre.sh
tests/benchmarks/scripts/Poisson_3D/: Nx160Ny160Nz160_AmgX_AGG.sh  Nx160Ny160Nz160_AmgX_Classical.sh  Nx160Ny160Nz160_PETSc_GAMG.sh  Nx160Ny160Nz160_PETSc_Hypre.sh  Nx200Ny200Nz150_AmgX_AGG.sh  Nx200Ny200Nz150_AmgX_Classical.sh  Nx200Ny200Nz150_PETSc_GAMG.sh  Nx200Ny200Nz150_PETSc_Hypre.sh  Nx300Ny300Nz250_AmgX_AGG.sh  Nx300Ny300Nz250_AmgX_Classical.sh  Nx300Ny300Nz250_PETSc_GAMG.sh  Nx300Ny300Nz250_PETSc_Hypre.sh  Nx320Ny160Nz80_AmgX_AGG.sh  Nx320Ny160Nz80_AmgX_Classical.sh  Nx320Ny160Nz80_PETSc_GAMG.sh  Nx320Ny160Nz80_PETSc_Hypre.sh  Nx500Ny500Nz400_AmgX_Classical.sh  Nx500Ny500Nz400_PETSc_GAMG.sh  Nx500Ny500Nz400_PETSc_Hypre.sh
tests/extra/MMtoPETScBin/: CMakeLists.txt
tests/extra/petsc/src/docs/tao_tex/tutorials/images/: interpmodel.eps.REMOVED.git-id
tests/solveFromFiles/: CMakeLists.txt
tests/utilities/: CMakeLists.txt
tests/utilities/src/: generateVecs.cpp  plotMatStructure.cpp  readMM.cpp
